# StageFlow

./: .coverage  .dockerignore  .gitignore  .ralphrc  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  REQUIREMENTS.md  TASK_PLAN.md  pyproject.toml
.claude/: audit.jsonl  benchmark_report.md  current_stage.json  guard_violations.jsonl  settings.json  settings.local.json
.claude/hooks/: stage_guard.py
.github/workflows/: ci.yml
.ralph/: .loop_start_sha  .token_count  AGENT.md  PROMPT.md  fix_plan.md  harness_iterations.md  progress.json
artifacts/analyze/: findings.md
artifacts/plan/: task_plan.md
demo/: demo_workflow.py
docs/: access_policy_verification.md  api_reference.md  git_like_design.md  harness_research.md  integration_blueprint.md  staged_verification.md
editor/: index.html  package-lock.json  package.json  server.py
editor/src/: App.css  App.test.tsx  App.tsx  main.tsx  types.ts
editor/workflows/: test_list_workflow.yaml
examples/run_scoped_artifacts/: run_demo.py
scripts/: hooks_off.py  hooks_on.py  phase27_acceptance.py  stage_back.py  stage_jump.py  stage_next.py  stage_reset.py  stage_status.py  verify_editor_fidelity.py
skills/stageflow-workflow-design/: SKILL.md
stageflow/: __init__.py  __main__.py  mcp_server.py
stageflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stageflow/agent/: __init__.py  hybrid.py  orchestrator.py  runner.py
tests/: conftest.py  test_access_layered.py  test_access_policy.py  test_agent.py  test_audit.py  test_benchmark.py  test_cache.py  test_concurrency.py  test_conditions.py  test_discovery.py  test_e2e.py  test_edge_cases.py  test_editor_e2e.py  test_engine.py  test_extensibility.py  test_extensibility_quick.py  test_generator.py  test_guard.py  test_hooks_integration.py  test_hybrid.py  test_linear.py  test_main.py  test_mcp_server.py  test_notion.py  test_orchestrator.py  test_perf.py  test_registry.py  test_run_demo.py  test_server.py  test_staged_verification.py  test_stress.py
vscode-extension/: package-lock.json  package.json  tsconfig.json
(+34 files in other folders)
