[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stageflow"
version = "0.2.0"
description = "Declarative extensible state machine for AI-driven workflows"
readme = "CLAUDE.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cyaos"}
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
stageflow = "stageflow.__main__:main"

[tool.setuptools.packages.find]
include = ["stageflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "stageflow: mark test to verify it runs in a specific StageFlow stage",
]
