[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stageflow"
version = "0.2.0"
description = "Declarative extensible state machine for AI-driven workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cyaos"}
]
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "types-PyYAML",
]
anthropic = [
    "anthropic>=0.18.0",
]
psutil = [
    "psutil>=5.9.0",
]
mcp = [
    "mcp>=0.9.0",
]
editor = []
all = [
    "pytest>=7.0",
    "pytest-cov",
    "anthropic>=0.18.0",
    "psutil>=5.9.0",
]

[project.scripts]
stageflow = "stageflow.__main__:main"

[tool.setuptools.packages.find]
include = ["stageflow*"]

[tool.setuptools.package-data]
stageflow = ["config/*.yaml", "generator/templates/*.yaml"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "stageflow: mark test to verify it runs in a specific StageFlow stage",
]
